syntax = "proto3";

package healthcare.common.v1;

option java_multiple_files = true;
option java_package = "com.healthcare.common.v1";
option java_outer_classname = "CommonProto";

// Common enums used across services
enum RiskLevel {
  RISK_LEVEL_UNSPECIFIED = 0;
  RISK_LEVEL_LOW = 1;
  RISK_LEVEL_MEDIUM = 2;
  RISK_LEVEL_HIGH = 3;
}

// Common message types
message TimeRange {
  string start_time = 1;
  string end_time = 2;
}

message DateRange {
  string start_date = 1;
  string end_date = 2;
}

// Common error response
message ErrorResponse {
  string code = 1;
  string message = 2;
  map<string, string> details = 3;
}

// Common pagination
message PaginationRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message PaginationResponse {
  int32 total_count = 1;
  string next_page_token = 2;
  bool has_more = 3;
} 